# ladebert

./: .gitignore  CHANGELOG.md  README.md  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vercel.json
.claude/: settings.local.json
.github/workflows/: release.yml
landingpage/: index.html
scripts/: build-release.sh  copy-dmg.sh
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/views/: Hoerbert.vue  Spotify.vue  YouTube.vue
