[package]
name = "hoerbert-downloader"
version = "0.1.0"
description = "Hörbert Downloader - YouTube & Spotify to MP3"
authors = []
license = ""
repository = ""
edition = "2021"

[lib]
name = "hoerbert_downloader_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
reqwest = { version = "0.12", features = ["json"] }
libc = "0.2"
quick-xml = "0.37"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
