[package]
name = "ladebert"
version = "1.8.1"
description = "Ladebert - YouTube & Spotify to MP3 für Hörbert"
authors = []
license = ""
repository = "https://github.com/elpeyotl/ladebert"
edition = "2021"

[lib]
name = "ladebert_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
reqwest = { version = "0.12", features = ["json"] }
quick-xml = "0.37"
urlencoding = "2.1.3"
chrono = "0.4.44"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
